# appton

./: README.md
pyton/: .gitignore  config.py  pyproject.toml
pyton/app/: __init__.py
pyton/app/models/: nutrition.py  training.py  weight.py
pyton/app/routes/: main.py  nutrition.py  training.py  weight.py
pyton/app/static/: layout.css
pyton/app/templates/: home.html  layout.html
pyton/app/templates/nutrition/: edit.html  home.html
pyton/app/templates/training/: edit.html  home.html
pyton/app/templates/weight/: edit.html  home.html
