[tool.poetry]
name = "pyton"
version = "0.1.0"
description = ""
authors = ["Anton Petry <antonpetry@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
python-dotenv = "^1.2.1"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
